--- a/about.html
+++ b/about.html
@@ -631,7 +631,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Subscribe us</h6>
                             <p>Sign up for our mailing list to get latest updates and offers</p>
-                            <form role="form" action="contact.php" class="contact-form" method="post">
+                            <form role="form" action="https://script.google.com/macros/s/AKfycbzr_1yM36tdllc0wdDndc2yVnrc-HPnr98Xy-26/exec" class="gform pure-form pure-form-stacked contact-form" method="post" onsubmit="alert('Email Submitted!');return false">
                                 <div class="input-group form-group">
                                     <input class="field form-control" id="email" name="email" type="email" placeholder="Email Address" required >
 									  <span class="input-group-btn form-group">
@@ -683,7 +683,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="assets/js/main.js"></script>
 </div>
 
-<!-- // new line -->
+<!-- Submit the Form to Google Using "AJAX" -->
+  <script data-cfasync="false" type="text/javascript" src="assets/form-submission-handler.js"></script>
+<!-- END -->
 	
 </body>
 
