--- a/eventhall.html
+++ b/eventhall.html
@@ -785,7 +785,7 @@ Third Floor
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Subscribe us</h6>
                             <p>Sign up for our mailing list to get latest updates and offers</p>
-                            <form role="form" action="contact.php" class="contact-form" method="post">
+                            <form role="form" action="https://script.google.com/macros/s/AKfycbzr_1yM36tdllc0wdDndc2yVnrc-HPnr98Xy-26/exec" class="gform pure-form pure-form-stacked contact-form" method="post" onsubmit="alert('Email Submitted!');return false">
                                 <div class="input-group form-group">
                                     <input class="field form-control" id="email" name="email" type="email" placeholder="Email Address" required >
 									  <span class="input-group-btn form-group">
@@ -793,8 +793,6 @@ Third Floor
                                     </span>
                                 </div>
                             </form>
-							<div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Posted your message successfully!</h3> </div>
-							<div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
 							
                             <p>We respect your privacy</p>
                             <ul class="nav social-nav">
@@ -849,12 +847,13 @@ Third Floor
 <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-de7e2ef6bfefd24b79a3f68b414b87b8db5b08439cac3f1012092b2290c719cd.js"></script>
 <script id="rendered-js">
       /*
-
  Needs some optimizing on mobile. Blur and box-shadows are pretty buggy there. Works best on desktop in Chrome & Safari.
-
 */
-      //# sourceURL=pen.js
     </script>
+	
+	<!-- Submit the Form to Google Using "AJAX" -->
+  <script data-cfasync="false" type="text/javascript" src="assets/form-submission-handler.js"></script>
+<!-- END -->
 </body>
 
 </html>
