--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -259,8 +259,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
                     <a href="tel:+234 802 695 8952" class="tel"><i class="fa fa-phone" aria-hidden="true"></i> +234 802 695 8952</a>
-                    <a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>info@GGEventhalls.com</a>
+                    <a href="mailto: info@ggeventhalls.com"><i class="fa fa-envelope"
+                            aria-hidden="true"></i>info@ggeventhalls.com</a>
                 </div>
                 <nav class="d-flex aic">
                     <ul class="nav social d-none d-md-flex">
@@ -466,7 +466,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<p>We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.
 				</p>
 				<p class="st"><b>Opposite the Archangels Church, #4/6 Mission St, Satellite Town 102002, Lagos.</b></p>
-				<p>You can also contact us by phone 0700JKFOODS (0700 55 36 637) or email info@GGEventhalls.com
+				<p>You can also contact us by phone 0700JKFOODS (0700 55 36 637) or email info@ggeventhalls.com
 				</p>
             </div>  </div>
 	</section>
@@ -520,7 +520,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <i class="fa fa-envelope-o"></i>
                                 <div class="media-body ml-3">
                                     <h6>Have any questions?</h6>
-                                    <a href="mailto: info@GGEventhalls.com"> info@GGEventhalls.com</a>
+                                    <a href="mailto: info@ggeventhalls.com"> info@ggeventhalls.com</a>
                                 </div>
                             </div>
                             <div class="media">
@@ -562,7 +562,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <p>We respect your privacy</p>
                             <ul class="nav social-nav">
                                 <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"></i></a></li>
+                                <li><a href="mailto: info@ggeventhalls.com"><i class="fa fa-envelope"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
