--- a/eventhall.html
+++ b/eventhall.html
@@ -409,8 +409,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
                     <a href="tel:+234 802 695 8952" class="tel"><i class="fa fa-phone" aria-hidden="true"></i> +234 802 695 8952</a>
-                    <a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>info@GGEventhalls.com</a>
+                    <a href="mailto: info@ggeventhalls.com"><i class="fa fa-envelope"
+                            aria-hidden="true"></i>info@ggeventhalls.com</a>
                 </div>
                 <nav class="d-flex aic">
                     <ul class="nav social d-none d-md-flex">
@@ -757,7 +757,7 @@ Third Floor
                                 <i class="fa fa-envelope-o"></i>
                                 <div class="media-body ml-3">
                                     <h6>Have any questions?</h6>
-                                    <a href="mailto: info@GGEventhalls.com"> info@GGEventhalls.com</a>
+                                    <a href="mailto: info@ggeventhalls.com"> info@ggeventhalls.com</a>
                                 </div>
                             </div>
                             <div class="media">
@@ -797,7 +797,7 @@ Third Floor
                             <p>We respect your privacy</p>
                             <ul class="nav social-nav">
                                 <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"></i></a></li>
+                                <li><a href="mailto: info@ggeventhalls.com"><i class="fa fa-envelope"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
