--- a/submit.html
+++ b/submit.html
@@ -3,24 +3,6 @@
 <html lang="en">
 
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145120711-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-145120711-1');
-</script>
-
-
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-M8P488V');</script>
-<!-- End Google Tag Manager -->
 
     <!--
     /   Multipurpose: Free Template by FreeHTML5.co
@@ -218,40 +200,6 @@ textarea {
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8P488V"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-
-<!-- Load Facebook SDK for JavaScript -->
-<div id="fb-root"></div>
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      xfbml            : true,
-      version          : 'v4.0'
-    });
-  };
-
-  (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-<!-- Your customer chat code -->
-<div class="fb-customerchat"
-  attribution=setup_tool
-  page_id="1016450635227960"
-  theme_color="#ee1515"
-  logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
-  logged_out_greeting="We are live and ready to chat with you now. Say something to start a live chat.">
-</div>
-
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
 
 
 <!-- Loader Start -->
@@ -281,9 +229,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </section>
 </body>
 	
-	
-	
-	
 	<!-- Call To Action 2 Start -->
     <section class="cta cta2" data-aos="fade-up" data-aos-delay="0">
         <div class="container">
@@ -309,7 +254,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 <a href="index.html" target="_blank">GGEventHalls</a>, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 GGEventHalls All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
                     <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="m.me/ggeventshall" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>LIVE CHAT </a><a
                         <a href="#">God is Great!</a></p>
                 </div>
@@ -332,9 +277,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="assets/js/main.js"></script>
 	<script src="assets/js/map.js"></script>
 	
-	<!-- Submit the Form to Google Using "AJAX" -->
-  <script data-cfasync="false" type="text/javascript" src="assets/form-submission-handler.js"></script>
-<!-- END -->
+	
 </body>
 
 </html>
