--- a/index.html
+++ b/index.html
@@ -812,6 +812,11 @@ form input{
 	.card-container, .wrapper {
 		margin-bottom: 5%;
 }
+
+	.map {
+		padding-right: 50px;
+		display:inline-block; width:50%; padding:20px; margin:20px;
+	}
 }
 
 
@@ -826,6 +831,11 @@ form input{
 	
 	.featured-small {
 	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
+	}
+	
+	.map {
+	padding-right: 50px;
+	display:inline-block; width:50%; padding:20px; margin:20px;
 	}
 }
 
@@ -1462,16 +1472,14 @@ Utilise our well situated shops to propel your business forward with access to t
     
 	<!-- Testimonial and Clients Start -->
     <section class="testimonial-and-clients" style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(assets/images/contact.jpg?image=690) fixed center center/cover no-repeat;
-    display: flex;
-    justify-content: center;
-    height: 100%;">
+    display: flex; justify-content: center; height: 100%;">
         <div class="container">
             <div class="testimonials">
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
 						<div class="row">
-						<div class="col-md-6" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" width="700px" height="580px" frameborder="0" style="border:0;" allowfullscreen></iframe>
+						<div class="map col-md-6"  id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" width="700px" height="580px" frameborder="0" class="map" id="map-canvas" allowfullscreen></iframe>
 						</div>
 					 </div>
 				<br>
@@ -1501,11 +1509,6 @@ Utilise our well situated shops to propel your business forward with access to t
 </div>
 </section>
     <!-- Testimonial and Clients End -->
-	
-	         
-	
-	
-	
 	
 	
     <!-- Call To Action 2 Start -->
@@ -1631,6 +1634,7 @@ Utilise our well situated shops to propel your business forward with access to t
     <script src="assets/js/lightgallery-all.min.js"></script>
 	<!--Template Script-->
     <script src="assets/js/main.js"></script>
+	<script src="assets/js/map.js"></script>
 	
 	<script>
   window.console = window.console || function(t) {};
