--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -313,7 +313,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide" >
                                     <h1 data-aos="fade-center" data-aos-delay="200">Kingstine-Jo Foods</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600">Fast Food Restaurant · African Restaurant · Food & Beverage Company.</p>
+                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Fast Food Restaurant · African Restaurant · Food & Beverage Company.</strong></p>
                                 </div>
                             </div>
                             </div>
