--- a/index.html
+++ b/index.html
@@ -867,6 +867,14 @@ form input{
     margin-top: 5%;
 	
   }
+  
+  .map {
+	height: 685px;
+	width: 100%;
+	display: block;
+	background: #f0f0f0;
+	margin: 50px 0 20px 0;
+}
 </style>
 </head>
 
@@ -975,7 +983,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Choose Flexible<br> Usage Options
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Get access to Great God Events Halls, your venue for great and successful events.
+                                    <p data-aos="fade-right" data-aos-delay="600"><strong>Get access to Great God Events Halls, your venue for great and successful events.</strong>
                                     </p>
 									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
@@ -987,7 +995,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Beautiful<br> and Spacious Halls
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Whether you need eventspace for one hour or more, we have a solution for you.
+                                    <p data-aos="fade-right" data-aos-delay="600"><strong>Whether you need eventspace for one hour or more, we have a solution for you.</strong>
                                     </p>
 									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
@@ -999,7 +1007,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Join our<br> successful events
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Join people with successful events hosted by us.
+                                    <p data-aos="fade-right" data-aos-delay="600"><strong>Join people with successful events hosted by us.</strong>
                                     </p>
 									<section class="link">
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
@@ -1479,7 +1487,7 @@ Utilise our well situated shops to propel your business forward with access to t
                     <div class="swiper-wrapper">
 						<div class="row">
 						<div class="map col-md-6"  id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" width="700px" height="580px" frameborder="0" class="map" id="map-canvas" allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map-canvas" allowfullscreen></iframe>
 						</div>
 					 </div>
 				<br>
