--- a/contact.html
+++ b/contact.html
@@ -319,7 +319,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <h1 data-aos="fade-center" data-aos-delay="200">Contact US</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600">Reach Out To US</p>
+                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Reach Out To US</strong></p>
                                 </div>
                             </div>
                             </div>
