--- a/shops.html
+++ b/shops.html
@@ -35,6 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta name="keywords" content="meetings, gatherings, events, shops, Kingstine-Jo Foods, Changing rooms,Cold Room, Store room, Car Park, Water Supply, Convenience, Chairs and Tables, Stage/Platform, Conference Room"	/>
 	<meta name='google-site-verification' content='#' />
     <meta name='msvalidate.01' content='#' />
+	
     <!-- Document title -->
     <title>Our Shops - Great God Events Hall</title>
     <!-- Stylesheets & Fonts -->
@@ -77,7 +78,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	display: block;
 	background: #f0f0f0;
 	margin: 20px 0 20px 0;
+	
 }
+
 	
 	 /*media quary */
 @media(max-width:420px) {
@@ -87,6 +90,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	display: block;
 	background: #f0f0f0;
 	margin: 20px 0 20px 0;
+	padding: 0 500% 0 0;
 }
 }
 </style>
@@ -130,6 +134,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <!-- Loader Start -->
+<a href="#" id="toTop" style="display: block;">
+		<span id="toTopHover" style="opacity: 1;"> </span>
+	</a>
+	
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
     </div>
@@ -194,7 +202,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <h1 data-aos="fade-center" data-aos-delay="200">Shops...</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600">Great Shops For Rent.</p>
+                                    <p data-aos="fade-center" data-aos-delay="600"><strong>Great Shops For Rent.</strong></p>
                                 </div>
                             </div>
                         </div>
@@ -225,7 +233,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="services">
         <div class="container">
             <div class="title text-center">
-                <h6>EVENT SPACE IS THE NEW WAY TO HOST</h6>
+                <h6>Utilise our well situated shops to propel your business forward with access to traffic and visibility.</h6>
                 <h1 class="title-blue">Shop Benefits</h1>
             </div>
             <div class="container">
@@ -298,9 +306,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
 						<div class="row">
-						<div class="col-md-7"  id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" class="map" id="map-canvas" frameborder="0" style="border:0" allowfullscreen></iframe>
-						</div>
+						<div class="col-md-7" id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map-canvas" style="border:0" allowfullscreen></iframe>
+							</div>
 					 </div>
 				<br>
 				<div class="col-md-6 d-none d-sm-flex" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
@@ -486,6 +494,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</section>
     </footer>
     <!-- Footer Endt -->
+	<!-- smooth scrolling-bottom-to-top -->
+	<script>
+	    $(document).ready(function () {
+	        /*
+	        var defaults = {
+	        containerID: 'toTop', // fading element id
+	        containerHoverID: 'toTopHover', // fading element hover id
+	        scrollSpeed: 1200,
+	        easingType: 'linear' 
+	        };
+	        */
+	        $().UItoTop({
+	            easingType: 'easeOutQuart'
+	        });
+	    });
+	</script>
+	
+	<!-- //smooth scrolling-bottom-to-top -->
+	
     <!--jQuery-->
     <script src="assets/js/jquery-3.3.1.js"></script>
     <!--Plugins-->
@@ -497,6 +524,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!--Template Script-->
     <script src="assets/js/main.js"></script>
 	<script src="assets/js/map.js"></script>
+	
+	<script src="assets/js/move-top.js"></script>
 	
 	
 	<!-- Submit the Form to Google Using "AJAX" -->
