--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -249,6 +249,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <!-- Loader Start -->
+	<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
+	
+	
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
     </div>
@@ -598,6 +602,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="assets/js/lightgallery-all.min.js"></script>
 	<!--Template Script-->
     <script src="assets/js/main.js"></script>
+	<script src="assets/js/move-top.js"></script>
 	
 <script>
 	/** @jsx h */
