--- a/about.html
+++ b/about.html
@@ -671,9 +671,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</section>
 		
 		
-		<a href="#" id="toTop" style="display: block;">
-		<span id="toTopHover" style="opacity: 1;"> </span>
-	</a>
+		<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
     </footer>
     <!-- Footer Endt -->
     <!--jQuery-->
@@ -689,24 +688,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <script src="assets/js/move-top.js"></script>
-<!-- smooth scrolling-bottom-to-top -->
-	<script>
-	    $(document).ready(function () {
-	        /*
-	        var defaults = {
-	        containerID: 'toTop', // fading element id
-	        containerHoverID: 'toTopHover', // fading element hover id
-	        scrollSpeed: 1200,
-	        easingType: 'linear' 
-	        };
-	        */
-	        $().UItoTop({
-	            easingType: 'easeOutQuart'
-	        });
-	    });
-	</script>
-	
-	<!-- //smooth scrolling-bottom-to-top -->
 
 <!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" type="text/javascript" src="assets/form-submission-handler.js"></script>
