--- a/contact.html
+++ b/contact.html
@@ -255,6 +255,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <!-- Loader Start -->
+<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
+
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
     </div>
@@ -548,6 +551,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!--Template Script-->
     <script src="assets/js/main.js"></script>
 	<script src="assets/js/map.js"></script>
+	<script src="assets/js/move-top.js"></script>
 	
 	<!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" type="text/javascript" src="assets/form-submission-handler.js"></script>
