--- a/eventhall.html
+++ b/eventhall.html
@@ -399,6 +399,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!--
 <div class="image-container set-full-height" style="background-image: url('https://subtlepatterns.com/patterns/sativa.png')">
      Loader Start -->
+	 <a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
+	 
+	 
     <div class="css-loader">
         <div class="loader-inner line-scale d-flex align-items-center justify-content-center"></div>
     </div>
@@ -833,6 +837,7 @@ Third Floor
     <script src="assets/js/lightgallery-all.min.js"></script>
 	<!--Template Script-->
     <script src="assets/js/main.js"></script>
+	<script src="assets/js/move-top.js"></script>
 	
 	<!-- // new line -->
 	
