--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,7 @@ Utilise our well situated shops to propel your business forward with access to t
                     <div class="swiper-wrapper">
 						<div class="row">
 						<div class="map col-md-6"  id="map-canvas" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" frameborder="0" class="map" id="map-canvas" allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.543025301986!2d3.252348714421916!3d6.452659125773862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8742c30930e9%3A0x2053b9f044a4f120!2sGREAT+GOD+EVENTS+HALL!5e0!3m2!1sen!2sng!4v1563512799295!5m2!1sen!2sng" height="560px" width="700px" frameborder="0" class="map" id="map-canvas" allowfullscreen style="position: relative;"></iframe>
 						</div>
 					 </div>
 				<br>
@@ -1630,6 +1630,10 @@ Utilise our well situated shops to propel your business forward with access to t
 	</div>
         <!-- Foot Note End -->
 		</section>
+		
+		
+		<a href="#" onclick="topFunction()" id="myBtn" title="Go to top" style="display: block;">
+		<span id="myBtn:hover" style="opacity: 1;"> </span>
     </footer>
     <!-- Footer Endt -->
     <!--jQuery-->
@@ -1643,6 +1647,7 @@ Utilise our well situated shops to propel your business forward with access to t
 	<!--Template Script-->
     <script src="assets/js/main.js"></script>
 	<script src="assets/js/map.js"></script>
+	<script src="assets/js/move-top.js"></script>
 	
 	<script>
   window.console = window.console || function(t) {};
