--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@ Utilise our well situated shops to propel your business forward with access to t
                         <span>per event</span>
                         <h2>Starter</h2>
                         <p class="desc">Hall1 - 600 Seaters</p>
-                        <p class="price">#200,000</p>
+                        <p class="price">&#8358 200,000</p>
                         <p>Access to great & amazing event hall amenities </p>
                         <a href="contact.html" class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
@@ -1446,7 +1446,7 @@ Utilise our well situated shops to propel your business forward with access to t
                         <span>per event</span>
                         <h2>Starter</h2>
                         <p class="desc">Hall2 - Dual Space</p>
-                        <p class="price">#300,000</p>
+                        <p class="price">&#8358 300,000</p>
                         <p>Fully Air - conditioned Halls</p>
                         <p>Free Changing Room</p>
                         <p>Access to Stage/Platform</p>
@@ -1464,7 +1464,7 @@ Utilise our well situated shops to propel your business forward with access to t
                         <span>per event</span>
                         <h2>Starter</h2>
                         <p class="desc">Hall3 - 1200 Seaters</p>
-                        <p class="price">#150,000+</p>
+                        <p class="price">&#8358 150,000+</p>
                         <p>Access to great & amazing event hall amenities</p>
                         <a href="contact.html" class="btn btn-primary">Book Now</a>
                         <svg viewBox="0 0 170 193">
