--- a/submit.html
+++ b/submit.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="robots" content="noindex">
+	<meta name="theme_color" content="red">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content='Contact us for your Weddings, Birthdays, Concerts, Graduation party, Bash, Grooves, Launchings, etc.' />
 	<meta name="keywords" content="meetings, gatherings, events, shops, Kingstine-Jo Foods, Changing rooms,Cold Room, Store room, Car Park, Water Supply, Convenience, Chairs and Tables, Stage/Platform, Conference Room"	/>
