--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -31,6 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="robots" content="noindex">
+	<meta name="theme_color" content="red">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content='Kingstine-jo Foods: Fast Food Restaurant · African Restaurant · Food & Beverage Company' />
 	<meta name="keywords" content="meetings, gatherings, events, shops, Kingstine-Jo Foods, Changing rooms,Cold Room, Store room, Car Park, Water Supply, Convenience, Chairs and Tables, Stage/Platform, Conference Room"	/>
